added removal of topics for reuse true